[package]
name = "image_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
plotters = "0.3.6"
rustfft = "6.2.0"
fft2d = "0.1.1"
nalgebra = "*"
show-image = "0.14.0"